<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragments.splash.LoginFragment">

    <data>
        <variable
            name="data"
            type="me.rootylabs.rootydizi.ui.fragments.splash.LoginFragment" />
    </data>


    <FrameLayout
        android:id="@+id/fragment_login_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/fragment_login_bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/splash_bg"/>

        <RelativeLayout
            android:id="@+id/fragment_login_focusable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp"
            android:gravity="center|bottom"
            android:orientation="vertical">


            <TextView
                android:id="@+id/fragment_login_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:padding="4dp"
                android:text="@string/rooty_labs"
                android:textSize="46dp"
                android:textStyle="bold"
                android:textColor="@color/moreWhite"/>

            <TextView
                android:id="@+id/fragment_login_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:text="@string/welcome_to_rootydizi"
                android:textColor="@color/lessWhite"
                android:textSize="14dp" />


            <android.support.design.widget.TextInputLayout
                android:id="@+id/fragment_login_username_root"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="10dp">


                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/fragment_login_username"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/googleg_standard_color_18"
                    android:drawablePadding="16dp"
                    android:hint="Username"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/fragment_login_password_root"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="28dp"
                android:layout_marginRight="28dp">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/fragment_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/googleg_standard_color_18"
                    android:drawablePadding="16dp"
                    android:hint="Password"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp" />

            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/fragment_login_signIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="28dp"
                android:layout_marginTop="14dp"
                android:layout_marginRight="28dp"
                android:layout_marginBottom="14dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/signin"
                android:background="@drawable/shape_ellipse"
                android:backgroundTint="@color/colorSignIn"/>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="30dp"
                android:paddingRight="30dp">

                <TextView
                    android:id="@+id/fragment_login_forgot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"
                    android:textSize="12dp"
                    android:paddingBottom="20dp"
                    android:paddingTop="2dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:paddingRight="1dp"/>

                <TextView
                    android:id="@+id/fragment_login_signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:textSize="12dp"
                    android:paddingBottom="20dp"
                    android:paddingTop="2dp"
                    app:layout_constraintRight_toRightOf="parent"
                    android:paddingLeft="14dp"/>

            </android.support.constraint.ConstraintLayout>

            <Button
                android:id="@+id/fragment_login_facebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="28dp"
                android:layout_marginRight="28dp"
                android:layout_marginBottom="14dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/sign_in_with_facebook"
                android:background="@drawable/shape_ellipse"
                android:backgroundTint="@color/colorFacebook" />


        </LinearLayout>


    </FrameLayout>

</layout>